Fix Scrollbar

--- a/coffee-data/src/app/globals.css
+++ b/coffee-data/src/app/globals.css
@@ -103,3 +103,27 @@ body {
 #polygon-label-text {
   @apply p-4;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(135deg, var(--clr-3), var(--clr-4));
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(135deg, var(--clr-2), var(--clr-5));
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
